k8s-billing-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-gateway
  labels:
    app: billing-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-gateway
  template:
    metadata:
      labels:
        app: billing-gateway
    spec:
      containers:
      - name: app
        image: "frankgu968/kubecon2023-billing-gateway:latest"
        ports:
        - name: app
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: billing-gateway
spec:
  selector:
    app: billing-gateway
  ports:
    - name: app
      protocol: TCP
      port: 7000
      targetPort: 8080
